* Change composite builder to use same technique as Project to detect build errors (in the build log, the "build" tag has an "error" attribute).
* Insert composite builder info into build log for each child builder.
Todo: Rearranging these elements (even nesting childLog elements?), might allow display of these child buider info elements in reporting apps.

Configuration documentation generation
----------------------
* Created addiitonal plugin superclasses to make generating configxml.html. Still a work in progress (CC-202). Patch by Jerome Lacoste.

ExecBuilder/RakeBuilder
----------------------
* Implement Progress support for Exec and Rake Builders.

Git Source Control & Bootstrapper
----------------------
* Sourcecontrol & Bootstrapper implementation for Git http://git.or.cz/ (CC-710). Submitted by Robert Schiele.

Http Publisher
----------------------
* New publisher to publish to via HTTP POST, GET, etc (CC-688). Contributed by Jonathan Gerrish.

Mercurial Source Control & Bootstrapper
----------------------
* Sourcecontrol & Bootstrapper implementation for Mercurial (hg) http://www.selenic.com/mercurial/wiki/ (CC-638). Submitted by Jerome Lacoste.

ModificationSet
----------------------
* Changed ModificationSet to use Progress Signaling API to report when sleeping due to modifications found during Quiet Period.

PVCS
----------------------
* Add support to check for changes against promotion group (CC-717); make thread-safe (CC-583); fix quoting (CC-655).  Patch by Shane Genschaw.

SVNLabelIncrementer
----------------------
* New label incrementer to update label based on SVN revision number (CC-716).  Submitted by Ketan Padegaonkar.

TeamFoundationServer source control
----------------------
* Fix compatibility with Microsoft Visual Studio Team Foundation Server 2008 (CC-735). Submitted by Martin Woodward.

Documentation
======================
* Add missing docs for "timeout" attributes on Maven and Maven2 builders.