@@ -6282,6 +6282,11 @@ endlocal</pre>
                 support multiple days except for the default of every day.</td>
             </tr>
             <tr>
+                <td>timeout</td>
+                <td>No</td>
+                <td>Composite Build will be halted if it continues longer than the specified timeout. Value in seconds.</td>
+            </tr>
+            <tr>
                 <td>showProgress</td>
                 <td>No  (defaults to true)</td>
                 <td>If true or omitted, the composite builder will provide progress messages, as will any child builders that support this
